# test

./: LICENSE
c/: c_examples.sln
c/01_init_api/: 01_init_api.c  01_init_api.sln  01_init_api.vcxproj  01_init_api.vcxproj.filters  CMakeLists.txt
c/02_connect_sensor/: 02_connect_sensor.c  02_connect_sensor.vcxproj  02_connect_sensor.vcxproj.filters  CMakeLists.txt
c/03_live_image/: 03_live_image.c  03_live_image.sln  03_live_image.vcxproj  03_live_image.vcxproj.filters  CMakeLists.txt
c/04_pil/: 04_pil.c  04_pil.sln  04_pil.vcxproj  04_pil.vcxproj.filters  CMakeLists.txt
c/05_point_cloud/: 05_point_cloud.c  05_point_cloud.sln  05_point_cloud.vcxproj  05_point_cloud.vcxproj.filters  AddSmartRayLib64.props  CMakeLists.txt
c/06_zil/: 06_zil.c  06_zil.vcxproj  06_zil.vcxproj.filters  CMakeLists.txt
c/07_roi/: 07_roi.c  07_roi.sln  07_roi.vcxproj  07_roi.vcxproj.filters  CMakeLists.txt
c/08_exposure_time/: 08_exposure_time.c  08_exposure_time.sln  08_exposure_time.vcxproj  08_exposure_time.vcxproj.filters  CMakeLists.txt
c/09_multiexposure/: 09_multiexposure.c  09_multiexposure.vcxproj  09_multiexposure.vcxproj.filters  CMakeLists.txt
c/10_data_trigger/: 10_data_trigger.c  10_data_trigger.vcxproj  10_data_trigger.vcxproj.filters  CMakeLists.txt
c/11_start_trigger/: 11_start_trigger.c  11_start_trigger.sln  11_start_trigger.vcxproj  11_start_trigger.vcxproj.filters  CMakeLists.txt
c/12_parameter_set/: 12_parameter_set.c  12_parameter_set.sln  12_parameter_set.vcxproj  12_parameter_set.vcxproj.filters  CMakeLists.txt
c/13_metadata/: 13_metadata.c  13_metadata.sln  13_metadata.vcxproj  13_metadata.vcxproj.filters  CMakeLists.txt
c/util/: util.h
c/vcxproj-props/: AddSmartRayLib32.props  AddSmartRayLib64.props
cpp/: cpp_examples.sln
cpp/01_init_api/: 01_init_api.cpp  01_init_api.vcxproj  01_init_api.vcxproj.filters  AddSmartRayLib32.props  CMakeLists.txt
cpp/02_connect_sensor/: 02_connect_sensor.cpp  02_connect_sensor.sln  02_connect_sensor.vcxproj  02_connect_sensor.vcxproj.filters  CMakeLists.txt
cpp/03_live_image/: 03_live_image.cpp  03_live_image.vcxproj  03_live_image.vcxproj.filters  CMakeLists.txt
cpp/04_pil/: 04_pil.cpp  04_pil.vcxproj  04_pil.vcxproj.filters  CMakeLists.txt
cpp/05_point_cloud/: 05_point_cloud.cpp  05_point_cloud.vcxproj  05_point_cloud.vcxproj.filters  CMakeLists.txt
cpp/06_zil/: 06_zil.cpp  06_zil.sln  06_zil.vcxproj  06_zil.vcxproj.filters  CMakeLists.txt
cpp/07_roi/: 07_roi.cpp  07_roi.vcxproj  07_roi.vcxproj.filters  CMakeLists.txt  IncludeSmartRaySdk.props
cpp/08_exposure_time/: 08_exposure_time.cpp  08_exposure_time.vcxproj  08_exposure_time.vcxproj.filters  CMakeLists.txt
cpp/09_multiexposure/: 09_multiexposure.cpp  09_multiexposure.sln  09_multiexposure.vcxproj  09_multiexposure.vcxproj.filters  CMakeLists.txt
cpp/10_data_trigger/: 10_data_trigger.cpp  10_data_trigger.sln  10_data_trigger.vcxproj  10_data_trigger.vcxproj.filters  CMakeLists.txt
cpp/11_start_trigger/: 11_start_trigger.cpp  11_start_trigger.vcxproj  11_start_trigger.vcxproj.filters  CMakeLists.txt
cpp/12_parameter_set/: 12_parameter_set.cpp  12_parameter_set.vcxproj  12_parameter_set.vcxproj.filters  CMakeLists.txt  parameter_set.json
cpp/13_metadata/: 13_metadata.cpp  13_metadata.vcxproj  13_metadata.vcxproj.filters  CMakeLists.txt
cpp/cpp_wrapper/: sr_sensor.h  sr_sensor_manager.h
cpp/vcxproj-props/: IncludeSmartRaySdk.props
